<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="com.example.mathpractice.beginquiz">

    <TextView
        android:id="@+id/newName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/mathematician_question"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:paddingTop="20sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        tools:text="@string/question"
        android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >

            <Button
                android:id="@+id/btn_one"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_above="@+id/btn_two"
                android:text="@string/answer1" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_above="@+id/btn_three"
                android:text="@string/answer2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >

            <Button
                android:id="@+id/btn_three"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_above="@+id/btn_four"
                android:layout_alignParentBottom="true"
                android:text="@string/answer3"

                />

            <Button
                android:id="@+id/btn_four"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:text="@string/answer4"/>

        </LinearLayout>

        <Button
            android:id="@+id/results_button"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/btnResults" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/btnNext" />


</LinearLayout>
